--- a/spark_streaming/examples/example_1_csv.ipynb
+++ b/spark_streaming/examples/example_1_csv.ipynb
@@ -342,7 +342,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Start streaming_1"
+        "# Start streaming_1 (memory)"
       ],
       "metadata": {
         "id": "g60VSmY6qwMk"
@@ -374,14 +374,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# querying data in memory\n",
         "spark.sql(\"select count(1) from qry1\").show()"
       ],
       "metadata": {
-        "id": "s2N4nVBcrfY2",
-        "outputId": "f16ab541-d638-4dcd-cbec-4a5e2ea682fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s2N4nVBcrfY2",
+        "outputId": "f16ab541-d638-4dcd-cbec-4a5e2ea682fb"
       },
       "execution_count": 703,
       "outputs": [
@@ -406,11 +407,11 @@
         "df.count() == spark.sql(\"select * from qry1\").count()"
       ],
       "metadata": {
-        "id": "rqZz5lwCtkaq",
-        "outputId": "4523237c-201f-4043-aab6-50d469c73c3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rqZz5lwCtkaq",
+        "outputId": "4523237c-201f-4043-aab6-50d469c73c3a"
       },
       "execution_count": 708,
       "outputs": [
@@ -427,87 +428,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "query.lastProgress"
-      ],
-      "metadata": {
-        "id": "CKwrDRSttP5Q",
-        "outputId": "b5bf9b4a-c01a-4666-b974-90a81e2dca00",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 596,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'id': '2624d08a-17b0-4065-b3c5-f74277bb1637',\n",
-              " 'runId': 'bbf5b057-8be1-4948-aab5-6ea9c4e307a5',\n",
-              " 'name': 'qry2',\n",
-              " 'timestamp': '2024-11-20T22:33:52.482Z',\n",
-              " 'batchId': 18,\n",
-              " 'numInputRows': 0,\n",
-              " 'inputRowsPerSecond': 0.0,\n",
-              " 'processedRowsPerSecond': 0.0,\n",
-              " 'durationMs': {'latestOffset': 4, 'triggerExecution': 4},\n",
-              " 'stateOperators': [],\n",
-              " 'sources': [{'description': 'FileStreamSource[file:/content/input]',\n",
-              "   'startOffset': {'logOffset': 17},\n",
-              "   'endOffset': {'logOffset': 17},\n",
-              "   'latestOffset': None,\n",
-              "   'numInputRows': 0,\n",
-              "   'inputRowsPerSecond': 0.0,\n",
-              "   'processedRowsPerSecond': 0.0}],\n",
-              " 'sink': {'description': 'MemorySink', 'numOutputRows': 0}}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 596
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iF9H8Yij6AWi"
-      },
-      "source": [
-        "# Checking results using query in memory"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 702,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mkqrNcOwVSWO",
-        "outputId": "0a8d872f-4bc5-4405-8771-e3ec9268d1f9"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+----+---------+-------+---------+-------+-----------+-----------------+-----------------------+-----------+--------+-----------------------------+-----------------+----------+------------------------+-----------------------------+-------------------------------+\n",
-            "|hash|Area Name|Area ID|Park Name|Park ID|Squirrel ID|Primary Fur Color|Highlights in Fur Color|Color Notes|Location|Above Ground (Height in Feet)|Specific Location|Activities|Interactions with Humans|Squirrel Latitude (DD.DDDDDD)|Squirrel Longitude (-DD.DDDDDD)|\n",
-            "+----+---------+-------+---------+-------+-----------+-----------------+-----------------------+-----------+--------+-----------------------------+-----------------+----------+------------------------+-----------------------------+-------------------------------+\n",
-            "+----+---------+-------+---------+-------+-----------+-----------------+-----------------------+-----------+--------+-----------------------------+-----------------+----------+------------------------+-----------------------------+-------------------------------+\n",
-            "\n"
-          ]
-        }
-      ],
-      "source": [
-        "df2 = spark.sql(\"select * from qry1\")\n",
-        "\n",
-        "df.join(df2, [\"hash\"], \"leftAnti\").show()"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hYHLg6DX6EMB"
@@ -518,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 709,
       "metadata": {
         "id": "lxEOqAOOVdFS"
       },
@@ -530,7 +450,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Start streaming (format PARQUET)"
+        "# Start streaming_2 (parquet)\n",
+        "\n"
       ],
       "metadata": {
         "id": "DbUVx-WCec2f"
@@ -538,33 +459,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WV8bFdqhkvrH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Pea2y9Q8kxNN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
+      "source": [
+        "query = streaming_2()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EEpMmQXiDwsT",
-        "outputId": "936e1849-ffc5-494f-ce9e-9f7c4cf6a2ad"
+        "outputId": "f909a4ac-4b19-4196-c751-e2e518176b1c"
       },
-      "execution_count": 482,
+      "execution_count": 711,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,6 +479,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query.stop()"
+      ],
+      "metadata": {
+        "id": "UcHJgMTnz16A"
+      },
+      "execution_count": 724,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -594,9 +510,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8rTQZ0t8kRCV",
-        "outputId": "d44da22b-c0a1-40f9-b902-39d5e08abf72"
+        "outputId": "954b1507-7d2f-4872-a80c-480bc682d3e4"
       },
-      "execution_count": 432,
+      "execution_count": 710,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +522,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 432
+          "execution_count": 710
         }
       ]
     },
@@ -624,9 +540,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x5kdA8TuDb3D",
-        "outputId": "15bea7da-0898-47b9-9df1-d4cc309cc5a4"
+        "outputId": "fa1eb216-71a4-4608-c769-1f617cebc916"
       },
-      "execution_count": 497,
+      "execution_count": 727,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,15 +576,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_ibDWoh2JLa8",
-        "outputId": "221c8510-93dc-4122-cfce-53623c54a102"
+        "outputId": "15cf6f78-defa-44c8-b95f-699f7400e732"
       },
-      "execution_count": 665,
+      "execution_count": 714,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "14\n"
+            "20\n"
           ]
         }
       ]
@@ -684,16 +600,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iA87VK23dtmw",
-        "outputId": "e6364487-e107-4063-afbf-ca189049c23d"
+        "outputId": "b473df7e-829e-4ba0-98a1-69e97ff84e93"
       },
-      "execution_count": 663,
+      "execution_count": 715,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ls: cannot access '/content/output': No such file or directory\n",
-            "0\n"
+            "1\n"
           ]
         }
       ]
@@ -701,91 +616,13 @@
     {
       "cell_type": "code",
       "source": [
-        "query.stop"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 186
-        },
-        "id": "_kctG7TSIDfx",
-        "outputId": "99b6e79c-872a-4c10-9e3d-d554aeecc004"
-      },
-      "execution_count": 188,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<bound method StreamingQuery.stop of <pyspark.sql.streaming.query.StreamingQuery object at 0x7d24d2151bd0>>"
-            ],
-            "text/html": [
-              "<div style=\"max-width:800px; border: 1px solid var(--colab-border-color);\"><style>\n",
-              "      pre.function-repr-contents {\n",
-              "        overflow-x: auto;\n",
-              "        padding: 8px 12px;\n",
-              "        max-height: 500px;\n",
-              "      }\n",
-              "\n",
-              "      pre.function-repr-contents.function-repr-contents-collapsed {\n",
-              "        cursor: pointer;\n",
-              "        max-height: 100px;\n",
-              "      }\n",
-              "    </style>\n",
-              "    <pre style=\"white-space: initial; background:\n",
-              "         var(--colab-secondary-surface-color); padding: 8px 12px;\n",
-              "         border-bottom: 1px solid var(--colab-border-color);\"><b>pyspark.sql.streaming.query.StreamingQuery.stop</b><br/>def stop() -&gt; None</pre><pre class=\"function-repr-contents function-repr-contents-collapsed\" style=\"\"><a class=\"filepath\" style=\"display:none\" href=\"#\">/usr/local/lib/python3.10/dist-packages/pyspark/sql/streaming/query.py</a>Stop this streaming query.\n",
-              "\n",
-              ".. versionadded:: 2.0.0\n",
-              "\n",
-              ".. versionchanged:: 3.5.0\n",
-              "    Supports Spark Connect.\n",
-              "\n",
-              "Examples\n",
-              "--------\n",
-              "&gt;&gt;&gt; sdf = spark.readStream.format(&quot;rate&quot;).load()\n",
-              "&gt;&gt;&gt; sq = sdf.writeStream.format(&#x27;memory&#x27;).queryName(&#x27;this_query&#x27;).start()\n",
-              "&gt;&gt;&gt; sq.isActive\n",
-              "True\n",
-              "\n",
-              "Stop streaming query\n",
-              "\n",
-              "&gt;&gt;&gt; sq.stop()\n",
-              "\n",
-              "&gt;&gt;&gt; sq.isActive\n",
-              "False</pre>\n",
-              "      <script>\n",
-              "      if (google.colab.kernel.accessAllowed && google.colab.files && google.colab.files.view) {\n",
-              "        for (const element of document.querySelectorAll('.filepath')) {\n",
-              "          element.style.display = 'block'\n",
-              "          element.onclick = (event) => {\n",
-              "            event.preventDefault();\n",
-              "            event.stopPropagation();\n",
-              "            google.colab.files.view(element.textContent, 349);\n",
-              "          };\n",
-              "        }\n",
-              "      }\n",
-              "      for (const element of document.querySelectorAll('.function-repr-contents')) {\n",
-              "        element.onclick = (event) => {\n",
-              "          event.preventDefault();\n",
-              "          event.stopPropagation();\n",
-              "          element.classList.toggle('function-repr-contents-collapsed');\n",
-              "        };\n",
-              "      }\n",
-              "      </script>\n",
-              "      </div>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 188
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# check streaming query attributes\n",
         "query.lastProgress\n",
-        "query.lastProgress['numInputRows']"
+        "query.lastProgress['numInputRows']\n",
+        "query.recentProgress\n",
+        "query.id\n",
+        "query.name\n",
+        "query.status"
       ],
       "metadata": {
         "colab": {
@@ -810,9 +647,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "query.recentProgress"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2618,87 +2453,7 @@
     {
       "cell_type": "code",
       "source": [
-        "query.status"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QjjEUqJhHNKN",
-        "outputId": "655474ba-073f-4976-be0d-15deed9452fb"
-      },
-      "execution_count": 439,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'message': 'Terminated with exception: [UNSUPPORTED_DATA_TYPE_FOR_DATASOURCE] The CSV datasource doesn\\'t support the column `durationMs` of the type \"STRUCT<addBatch: INT, commitOffsets: INT, getBatch: INT, latestOffset: INT, queryPlanning: INT, triggerExecution: INT, walCommit: INT>\".',\n",
-              " 'isDataAvailable': False,\n",
-              " 'isTriggerActive': False}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 439
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "c = 0\n",
-        "for i in query.recentProgress:\n",
-        "  c += i['numInputRows']\n",
-        "\n",
-        "print(c)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7bA1nrjiIhjj",
-        "outputId": "a863f2b3-aed6-4375-dd6f-b78c2657d690"
-      },
-      "execution_count": 417,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.count()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ILKg-paPFy65",
-        "outputId": "5242f6bd-b2f8-4d58-f347-3a1c5970d4ba"
-      },
-      "execution_count": 418,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "432"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 418
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# checking input schema\n",
         "input.printSchema()"
       ],
       "metadata": {
@@ -2706,9 +2461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ufgg5TuakJV2",
-        "outputId": "35090895-d5d4-4ba1-af16-2a868315b067"
+        "outputId": "5801df38-f57e-4283-eee5-56ffeba21412"
       },
-      "execution_count": 424,
+      "execution_count": 728,
       "outputs": [
         {
           "output_type": "stream",
@@ -2739,6 +2494,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# checking output schema\n",
         "output.printSchema()"
       ],
       "metadata": {
@@ -2746,44 +2502,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fUSx-6NsMwEK",
-        "outputId": "1d82305b-156a-4b6c-d983-ddbe2457e885"
+        "outputId": "175f2c70-ffd0-4c63-8c1c-0f2340afabd9"
       },
-      "execution_count": 427,
+      "execution_count": 729,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "root\n",
-            " |-- id: string (nullable = true)\n",
-            " |-- runId: string (nullable = true)\n",
-            " |-- name: string (nullable = true)\n",
-            " |-- timestamp: string (nullable = true)\n",
-            " |-- batchId: string (nullable = true)\n",
-            " |-- numInputRows: string (nullable = true)\n",
-            " |-- inputRowsPerSecond: string (nullable = true)\n",
-            " |-- processedRowsPerSecond: string (nullable = true)\n",
-            " |-- durationMs: struct (nullable = true)\n",
-            " |    |-- addBatch: integer (nullable = true)\n",
-            " |    |-- commitOffsets: integer (nullable = true)\n",
-            " |    |-- getBatch: integer (nullable = true)\n",
-            " |    |-- latestOffset: integer (nullable = true)\n",
-            " |    |-- queryPlanning: integer (nullable = true)\n",
-            " |    |-- triggerExecution: integer (nullable = true)\n",
-            " |    |-- walCommit: integer (nullable = true)\n",
+            " |-- Area Name: string (nullable = true)\n",
+            " |-- Area ID: string (nullable = true)\n",
+            " |-- Park Name: string (nullable = true)\n",
+            " |-- Park ID: string (nullable = true)\n",
+            " |-- Squirrel ID: string (nullable = true)\n",
+            " |-- Primary Fur Color: string (nullable = true)\n",
+            " |-- Highlights in Fur Color: string (nullable = true)\n",
+            " |-- Color Notes: string (nullable = true)\n",
+            " |-- Location: string (nullable = true)\n",
+            " |-- Above Ground (Height in Feet): string (nullable = true)\n",
+            " |-- Specific Location: string (nullable = true)\n",
+            " |-- Activities: string (nullable = true)\n",
+            " |-- Interactions with Humans: string (nullable = true)\n",
+            " |-- Squirrel Latitude (DD.DDDDDD): string (nullable = true)\n",
+            " |-- Squirrel Longitude (-DD.DDDDDD): string (nullable = true)\n",
+            " |-- hash: string (nullable = true)\n",
             "\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ioBhPgH8kTJl"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
