--- a/spark_streaming/examples/1-read_write_stream.ipynb
+++ b/spark_streaming/examples/1-read_write_stream.ipynb
@@ -386,18 +386,27 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Checking result table"
+      ],
+      "metadata": {
+        "id": "VaP6GAg8bUiD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# StreamingQuery\n",
         "type(query)"
       ],
       "metadata": {
-        "id": "aCZ2yxZ6aGk-",
-        "outputId": "01940a15-0a41-44e0-8573-9e8b94bcafb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 186
-        }
+        },
+        "id": "aCZ2yxZ6aGk-",
+        "outputId": "01940a15-0a41-44e0-8573-9e8b94bcafb4"
       },
       "execution_count": 40,
       "outputs": [
@@ -464,46 +473,48 @@
       "cell_type": "code",
       "source": [
         "print(spark.table(\"rate_report\").count())\n",
-        "spark.table(\"rate_report\").show()"
+        "spark.table(\"rate_report\").show(20, False)\n",
+        "\n",
+        "# one line per second"
       ],
       "metadata": {
-        "id": "EFigRYqmZ0Hp",
-        "outputId": "cd3589ac-bc3f-4bca-8611-33a63b448c94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EFigRYqmZ0Hp",
+        "outputId": "e3b5352c-1d95-4c40-df6a-d6832eb7fd13"
       },
-      "execution_count": 39,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "73\n",
-            "+--------------------+-----+------+\n",
-            "|           timestamp|value|value2|\n",
-            "+--------------------+-----+------+\n",
-            "|2024-11-22 15:04:...|    0|     0|\n",
-            "|2024-11-22 15:04:...|    1|     2|\n",
-            "|2024-11-22 15:04:...|    2|     4|\n",
-            "|2024-11-22 15:04:...|    3|     6|\n",
-            "|2024-11-22 15:04:...|    4|     8|\n",
-            "|2024-11-22 15:04:...|    5|    10|\n",
-            "|2024-11-22 15:04:...|    6|    12|\n",
-            "|2024-11-22 15:04:...|    7|    14|\n",
-            "|2024-11-22 15:04:...|    8|    16|\n",
-            "|2024-11-22 15:04:...|    9|    18|\n",
-            "|2024-11-22 15:04:...|   10|    20|\n",
-            "|2024-11-22 15:04:...|   11|    22|\n",
-            "|2024-11-22 15:04:...|   12|    24|\n",
-            "|2024-11-22 15:04:...|   13|    26|\n",
-            "|2024-11-22 15:04:...|   14|    28|\n",
-            "|2024-11-22 15:04:...|   15|    30|\n",
-            "|2024-11-22 15:04:...|   16|    32|\n",
-            "|2024-11-22 15:04:...|   17|    34|\n",
-            "|2024-11-22 15:04:...|   18|    36|\n",
-            "|2024-11-22 15:04:...|   19|    38|\n",
-            "+--------------------+-----+------+\n",
+            "304\n",
+            "+----------------------+-----+------+\n",
+            "|timestamp             |value|value2|\n",
+            "+----------------------+-----+------+\n",
+            "|2024-11-22 15:04:15.04|0    |0     |\n",
+            "|2024-11-22 15:04:16.04|1    |2     |\n",
+            "|2024-11-22 15:04:17.04|2    |4     |\n",
+            "|2024-11-22 15:04:18.04|3    |6     |\n",
+            "|2024-11-22 15:04:19.04|4    |8     |\n",
+            "|2024-11-22 15:04:20.04|5    |10    |\n",
+            "|2024-11-22 15:04:21.04|6    |12    |\n",
+            "|2024-11-22 15:04:22.04|7    |14    |\n",
+            "|2024-11-22 15:04:23.04|8    |16    |\n",
+            "|2024-11-22 15:04:24.04|9    |18    |\n",
+            "|2024-11-22 15:04:25.04|10   |20    |\n",
+            "|2024-11-22 15:04:26.04|11   |22    |\n",
+            "|2024-11-22 15:04:27.04|12   |24    |\n",
+            "|2024-11-22 15:04:28.04|13   |26    |\n",
+            "|2024-11-22 15:04:29.04|14   |28    |\n",
+            "|2024-11-22 15:04:30.04|15   |30    |\n",
+            "|2024-11-22 15:04:31.04|16   |32    |\n",
+            "|2024-11-22 15:04:32.04|17   |34    |\n",
+            "|2024-11-22 15:04:33.04|18   |36    |\n",
+            "|2024-11-22 15:04:34.04|19   |38    |\n",
+            "+----------------------+-----+------+\n",
             "only showing top 20 rows\n",
             "\n"
           ]
@@ -516,11 +527,11 @@
         "query.status"
       ],
       "metadata": {
-        "id": "fmDd4IvkZ4Nk",
-        "outputId": "4057d1ce-9674-4e40-c1e1-33998cc3892c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fmDd4IvkZ4Nk",
+        "outputId": "4057d1ce-9674-4e40-c1e1-33998cc3892c"
       },
       "execution_count": 44,
       "outputs": [
@@ -544,11 +555,11 @@
         "query.isActive"
       ],
       "metadata": {
-        "id": "zHiq0hvgaORE",
-        "outputId": "f07acfd5-160f-4358-fba5-7ab7d6e7d52a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zHiq0hvgaORE",
+        "outputId": "f07acfd5-160f-4358-fba5-7ab7d6e7d52a"
       },
       "execution_count": 63,
       "outputs": [
@@ -570,11 +581,11 @@
         "query.recentProgress"
       ],
       "metadata": {
-        "id": "m1-n-DWFaQLs",
-        "outputId": "96f1d0ad-df08-4e89-f2aa-f7ea28f19df1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m1-n-DWFaQLs",
+        "outputId": "96f1d0ad-df08-4e89-f2aa-f7ea28f19df1"
       },
       "execution_count": 67,
       "outputs": [
@@ -2971,11 +2982,11 @@
         "query.lastProgress['batchId']"
       ],
       "metadata": {
-        "id": "LTW9bMWuaSuB",
-        "outputId": "3195cb78-2e3b-4a21-eda8-113970fcc2dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LTW9bMWuaSuB",
+        "outputId": "3195cb78-2e3b-4a21-eda8-113970fcc2dd"
       },
       "execution_count": 82,
       "outputs": [
@@ -2992,6 +3003,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Stop streaming"
+      ],
+      "metadata": {
+        "id": "8UTsoqHsbZtN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "query.stop()"
@@ -3000,6 +3020,230 @@
         "id": "rZCylmlWare-"
       },
       "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# awaitTermination\n"
+      ],
+      "metadata": {
+        "id": "0RRyQRh4bcW5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Increase rows per second (rate)\n"
+      ],
+      "metadata": {
+        "id": "osbNYm_ScJQC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# read stream\n",
+        "stream = spark.readStream.format(\"rate\").option(\"rowsPerSecond\", 20).load()\n",
+        "\n",
+        "transformed = stream.withColumn(\"value2\", F.col(\"value\") * 2)\n",
+        "\n",
+        "query = (transformed.writeStream\n",
+        "  .format('memory')\n",
+        "  .queryName('rate_report_2')\n",
+        "  .outputMode('append')\n",
+        "  .start()\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "7uNFWm_Bbd-1"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(spark.table(\"rate_report_2\").count())\n",
+        "spark.table(\"rate_report_2\").show(100, False)"
+      ],
+      "metadata": {
+        "id": "oXfjDZfscgQE",
+        "outputId": "2a398a22-caab-4f75-8097-06b70f39b287",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "740\n",
+            "+-----------------------+-----+------+\n",
+            "|timestamp              |value|value2|\n",
+            "+-----------------------+-----+------+\n",
+            "|2024-11-22 15:16:27.485|0    |0     |\n",
+            "|2024-11-22 15:16:27.535|1    |2     |\n",
+            "|2024-11-22 15:16:27.585|2    |4     |\n",
+            "|2024-11-22 15:16:27.635|3    |6     |\n",
+            "|2024-11-22 15:16:27.685|4    |8     |\n",
+            "|2024-11-22 15:16:27.735|5    |10    |\n",
+            "|2024-11-22 15:16:27.785|6    |12    |\n",
+            "|2024-11-22 15:16:27.835|7    |14    |\n",
+            "|2024-11-22 15:16:27.885|8    |16    |\n",
+            "|2024-11-22 15:16:27.935|9    |18    |\n",
+            "|2024-11-22 15:16:27.985|10   |20    |\n",
+            "|2024-11-22 15:16:28.035|11   |22    |\n",
+            "|2024-11-22 15:16:28.085|12   |24    |\n",
+            "|2024-11-22 15:16:28.135|13   |26    |\n",
+            "|2024-11-22 15:16:28.185|14   |28    |\n",
+            "|2024-11-22 15:16:28.235|15   |30    |\n",
+            "|2024-11-22 15:16:28.285|16   |32    |\n",
+            "|2024-11-22 15:16:28.335|17   |34    |\n",
+            "|2024-11-22 15:16:28.385|18   |36    |\n",
+            "|2024-11-22 15:16:28.435|19   |38    |\n",
+            "|2024-11-22 15:16:28.485|20   |40    |\n",
+            "|2024-11-22 15:16:28.535|21   |42    |\n",
+            "|2024-11-22 15:16:28.585|22   |44    |\n",
+            "|2024-11-22 15:16:28.635|23   |46    |\n",
+            "|2024-11-22 15:16:28.685|24   |48    |\n",
+            "|2024-11-22 15:16:28.735|25   |50    |\n",
+            "|2024-11-22 15:16:28.785|26   |52    |\n",
+            "|2024-11-22 15:16:28.835|27   |54    |\n",
+            "|2024-11-22 15:16:28.885|28   |56    |\n",
+            "|2024-11-22 15:16:28.935|29   |58    |\n",
+            "|2024-11-22 15:16:28.985|30   |60    |\n",
+            "|2024-11-22 15:16:29.035|31   |62    |\n",
+            "|2024-11-22 15:16:29.085|32   |64    |\n",
+            "|2024-11-22 15:16:29.135|33   |66    |\n",
+            "|2024-11-22 15:16:29.185|34   |68    |\n",
+            "|2024-11-22 15:16:29.235|35   |70    |\n",
+            "|2024-11-22 15:16:29.285|36   |72    |\n",
+            "|2024-11-22 15:16:29.335|37   |74    |\n",
+            "|2024-11-22 15:16:29.385|38   |76    |\n",
+            "|2024-11-22 15:16:29.435|39   |78    |\n",
+            "|2024-11-22 15:16:29.485|40   |80    |\n",
+            "|2024-11-22 15:16:29.535|41   |82    |\n",
+            "|2024-11-22 15:16:29.585|42   |84    |\n",
+            "|2024-11-22 15:16:29.635|43   |86    |\n",
+            "|2024-11-22 15:16:29.685|44   |88    |\n",
+            "|2024-11-22 15:16:29.735|45   |90    |\n",
+            "|2024-11-22 15:16:29.785|46   |92    |\n",
+            "|2024-11-22 15:16:29.835|47   |94    |\n",
+            "|2024-11-22 15:16:29.885|48   |96    |\n",
+            "|2024-11-22 15:16:29.935|49   |98    |\n",
+            "|2024-11-22 15:16:29.985|50   |100   |\n",
+            "|2024-11-22 15:16:30.035|51   |102   |\n",
+            "|2024-11-22 15:16:30.085|52   |104   |\n",
+            "|2024-11-22 15:16:30.135|53   |106   |\n",
+            "|2024-11-22 15:16:30.185|54   |108   |\n",
+            "|2024-11-22 15:16:30.235|55   |110   |\n",
+            "|2024-11-22 15:16:30.285|56   |112   |\n",
+            "|2024-11-22 15:16:30.335|57   |114   |\n",
+            "|2024-11-22 15:16:30.385|58   |116   |\n",
+            "|2024-11-22 15:16:30.435|59   |118   |\n",
+            "|2024-11-22 15:16:30.485|60   |120   |\n",
+            "|2024-11-22 15:16:30.535|61   |122   |\n",
+            "|2024-11-22 15:16:30.585|62   |124   |\n",
+            "|2024-11-22 15:16:30.635|63   |126   |\n",
+            "|2024-11-22 15:16:30.685|64   |128   |\n",
+            "|2024-11-22 15:16:30.735|65   |130   |\n",
+            "|2024-11-22 15:16:30.785|66   |132   |\n",
+            "|2024-11-22 15:16:30.835|67   |134   |\n",
+            "|2024-11-22 15:16:30.885|68   |136   |\n",
+            "|2024-11-22 15:16:30.935|69   |138   |\n",
+            "|2024-11-22 15:16:30.985|70   |140   |\n",
+            "|2024-11-22 15:16:31.035|71   |142   |\n",
+            "|2024-11-22 15:16:31.085|72   |144   |\n",
+            "|2024-11-22 15:16:31.135|73   |146   |\n",
+            "|2024-11-22 15:16:31.185|74   |148   |\n",
+            "|2024-11-22 15:16:31.235|75   |150   |\n",
+            "|2024-11-22 15:16:31.285|76   |152   |\n",
+            "|2024-11-22 15:16:31.335|77   |154   |\n",
+            "|2024-11-22 15:16:31.385|78   |156   |\n",
+            "|2024-11-22 15:16:31.435|79   |158   |\n",
+            "|2024-11-22 15:16:31.485|80   |160   |\n",
+            "|2024-11-22 15:16:31.535|81   |162   |\n",
+            "|2024-11-22 15:16:31.585|82   |164   |\n",
+            "|2024-11-22 15:16:31.635|83   |166   |\n",
+            "|2024-11-22 15:16:31.685|84   |168   |\n",
+            "|2024-11-22 15:16:31.735|85   |170   |\n",
+            "|2024-11-22 15:16:31.785|86   |172   |\n",
+            "|2024-11-22 15:16:31.835|87   |174   |\n",
+            "|2024-11-22 15:16:31.885|88   |176   |\n",
+            "|2024-11-22 15:16:31.935|89   |178   |\n",
+            "|2024-11-22 15:16:31.985|90   |180   |\n",
+            "|2024-11-22 15:16:32.035|91   |182   |\n",
+            "|2024-11-22 15:16:32.085|92   |184   |\n",
+            "|2024-11-22 15:16:32.135|93   |186   |\n",
+            "|2024-11-22 15:16:32.185|94   |188   |\n",
+            "|2024-11-22 15:16:32.235|95   |190   |\n",
+            "|2024-11-22 15:16:32.285|96   |192   |\n",
+            "|2024-11-22 15:16:32.335|97   |194   |\n",
+            "|2024-11-22 15:16:32.385|98   |196   |\n",
+            "|2024-11-22 15:16:32.435|99   |198   |\n",
+            "+-----------------------+-----+------+\n",
+            "only showing top 100 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query.lastProgress['sources'][0]['numInputRows']"
+      ],
+      "metadata": {
+        "id": "RE7kEeoucxY0",
+        "outputId": "8c22042a-a669-45d7-8237-827989d298da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for batch in query.recentProgress:\n",
+        "  print(f\"timestamp - {batch['timestamp']}\")\n",
+        "  print(f\"batchId - {batch['batchId']}\")\n",
+        "  print(f\"numInputRows - {batch['numInputRows']}\")\n",
+        "  print(\"--\")"
+      ],
+      "metadata": {
+        "id": "8OkLiIoEc0VC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query.stop()"
+      ],
+      "metadata": {
+        "id": "SMx57jtidbZP"
+      },
+      "execution_count": 118,
       "outputs": []
     }
   ],
