--- a/spark_streaming/examples/example_2_rate.ipynb
+++ b/spark_streaming/examples/example_2_rate.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -72,12 +72,21 @@
       "source": [
         "from pyspark.sql import SparkSession\n",
         "\n",
-        "spark = SparkSession.builder.master('local').appName('Test streaming').config('spark.ui.port', '4050').getOrCreate()"
+        "spark = SparkSession.builder.master('local').appName('Test streaming').getOrCreate()"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Write output in memory"
+      ],
+      "metadata": {
+        "id": "NwzaZIoxqvrd"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "I4mGPfB-Xg_C"
       },
@@ -92,7 +101,7 @@
         "transformed = stream1.withColumn(\"minute\", F.minute(\"timestamp\"))\n",
         "agg = transformed.groupBy(F.window(transformed.timestamp, \"5 seconds\")).count()\n",
         "\n",
-        "# write stream\n",
+        "# write stream in memory\n",
         "query = (agg.writeStream\n",
         ".format('memory')\n",
         ".queryName('my_query')\n",
@@ -103,32 +112,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UmLQLr1uX6w-",
-        "outputId": "d3c1e349-b5c2-4b95-8db4-cc02cbf6743b"
+        "outputId": "8835d049-f8d6-49c4-f03e-692918261215"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "+------------------------------------------+-----+\n",
             "|window                                    |count|\n",
             "+------------------------------------------+-----+\n",
-            "|{2024-11-05 18:12:25, 2024-11-05 18:12:30}|29   |\n",
-            "|{2024-11-05 18:12:20, 2024-11-05 18:12:25}|50   |\n",
-            "|{2024-11-05 18:12:15, 2024-11-05 18:12:20}|50   |\n",
-            "|{2024-11-05 18:12:10, 2024-11-05 18:12:15}|50   |\n",
-            "|{2024-11-05 18:12:05, 2024-11-05 18:12:10}|50   |\n",
-            "|{2024-11-05 18:12:00, 2024-11-05 18:12:05}|50   |\n",
-            "|{2024-11-05 18:11:55, 2024-11-05 18:12:00}|50   |\n",
-            "|{2024-11-05 18:11:50, 2024-11-05 18:11:55}|50   |\n",
-            "|{2024-11-05 18:11:45, 2024-11-05 18:11:50}|50   |\n",
-            "|{2024-11-05 18:11:40, 2024-11-05 18:11:45}|50   |\n",
+            "|{2024-11-22 15:45:15, 2024-11-22 15:45:20}|47   |\n",
+            "|{2024-11-22 15:45:10, 2024-11-22 15:45:15}|50   |\n",
+            "|{2024-11-22 15:45:05, 2024-11-22 15:45:10}|50   |\n",
+            "|{2024-11-22 15:45:00, 2024-11-22 15:45:05}|50   |\n",
+            "|{2024-11-22 15:44:55, 2024-11-22 15:45:00}|50   |\n",
+            "|{2024-11-22 15:44:50, 2024-11-22 15:44:55}|50   |\n",
+            "|{2024-11-22 15:44:45, 2024-11-22 15:44:50}|50   |\n",
+            "|{2024-11-22 15:44:40, 2024-11-22 15:44:45}|50   |\n",
+            "|{2024-11-22 15:44:35, 2024-11-22 15:44:40}|50   |\n",
+            "|{2024-11-22 15:44:30, 2024-11-22 15:44:35}|50   |\n",
             "+------------------------------------------+-----+\n",
             "only showing top 10 rows\n",
             "\n"
@@ -141,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {
         "id": "TbLt4cUkX-JZ"
       },
@@ -151,23 +160,121 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Write output as json"
+      ],
+      "metadata": {
+        "id": "Dc3r3j-wj16K"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!rm -rf content/output"
+      ],
+      "metadata": {
+        "id": "N_BZRFCCpGq9"
+      },
+      "execution_count": 131,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 132,
       "metadata": {
         "id": "v180mzIciVZH"
       },
       "outputs": [],
       "source": [
+        "import pyspark.sql.functions as F\n",
+        "from pyspark.sql import DataFrame\n",
         "\n",
-        "# Tasks:\n",
-        "## Create/extract column \"minute\" from the timestamp\n",
-        "## Save output as JSON without partitioning / or partitioned by minute\n",
+        "def save_parquet(df, batch_id):\n",
+        "  (df\n",
+        "   .withColumn(\"batch_id\",F.lit(batch_id))\n",
+        "   .withColumn(\"load_time\",F.current_timestamp())\n",
+        "   .write.mode(\"append\")\n",
+        "   .parquet(\"content/output/rate_parquet\")\n",
+        "  )\n",
         "\n",
-        "# Questions:\n",
-        "##\n",
-        "##\n",
-        "\n"
+        "# read stream\n",
+        "stream1 = spark.readStream.format(\"rate\").option(\"rowsPerSecond\", 10).load()\n",
+        "\n",
+        "# transform\n",
+        "transformed = stream1.withWatermark(\"timestamp\", \"5 seconds\").withColumn(\"minute\", F.minute(\"timestamp\"))\n",
+        "agg = transformed.groupBy(F.window(transformed.timestamp, \"5 seconds\")).count()\n",
+        "\n",
+        "# write stream as parquet with foreachBatch\n",
+        "query = (agg.writeStream\n",
+        ".option('checkpointLocation', 'content/output/checkpoint')\n",
+        ".trigger(processingTime='20 seconds')\n",
+        ".outputMode('append')\n",
+        ".foreachBatch(save_parquet)\n",
+        ".start()\n",
+        ")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = spark.read.format(\"parquet\").load(\"content/output/rate_parquet/\")\n",
+        "result.sort(F.asc(\"window\")).show(100, False)"
+      ],
+      "metadata": {
+        "id": "-3SWIR6Ml8Al",
+        "outputId": "e579771a-7fcc-409d-b938-0c0ce4d5fae9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------------------------------------+-----+--------+--------------------------+\n",
+            "|window                                    |count|batch_id|load_time                 |\n",
+            "+------------------------------------------+-----+--------+--------------------------+\n",
+            "|{2024-11-22 16:36:45, 2024-11-22 16:36:50}|17   |2       |2024-11-22 16:37:20.187321|\n",
+            "|{2024-11-22 16:36:50, 2024-11-22 16:36:55}|50   |2       |2024-11-22 16:37:20.187321|\n",
+            "|{2024-11-22 16:36:55, 2024-11-22 16:37:00}|50   |3       |2024-11-22 16:37:40.240769|\n",
+            "|{2024-11-22 16:37:00, 2024-11-22 16:37:05}|50   |3       |2024-11-22 16:37:40.240769|\n",
+            "|{2024-11-22 16:37:05, 2024-11-22 16:37:10}|50   |3       |2024-11-22 16:37:40.240769|\n",
+            "|{2024-11-22 16:37:10, 2024-11-22 16:37:15}|50   |4       |2024-11-22 16:38:00.20902 |\n",
+            "|{2024-11-22 16:37:15, 2024-11-22 16:37:20}|50   |4       |2024-11-22 16:38:00.20902 |\n",
+            "|{2024-11-22 16:37:20, 2024-11-22 16:37:25}|50   |4       |2024-11-22 16:38:00.20902 |\n",
+            "|{2024-11-22 16:37:25, 2024-11-22 16:37:30}|50   |4       |2024-11-22 16:38:00.20902 |\n",
+            "|{2024-11-22 16:37:30, 2024-11-22 16:37:35}|50   |5       |2024-11-22 16:38:20.204491|\n",
+            "|{2024-11-22 16:37:35, 2024-11-22 16:37:40}|50   |5       |2024-11-22 16:38:20.204491|\n",
+            "|{2024-11-22 16:37:40, 2024-11-22 16:37:45}|50   |5       |2024-11-22 16:38:20.204491|\n",
+            "|{2024-11-22 16:37:45, 2024-11-22 16:37:50}|50   |5       |2024-11-22 16:38:20.204491|\n",
+            "+------------------------------------------+-----+--------+--------------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query.stop()"
+      ],
+      "metadata": {
+        "id": "DKB-MAPOoEre"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Enrich data with faker"
+      ],
+      "metadata": {
+        "id": "GjAp1IKnvteX"
+      }
     },
     {
       "cell_type": "code",
@@ -176,12 +283,12 @@
       ],
       "metadata": {
         "id": "_gauZX8MFP5f",
-        "outputId": "c81555fb-fc5d-409f-e6a2-b4bae1388503",
+        "outputId": "e6820854-14aa-4cfd-e2c6-37688b02999a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +300,7 @@
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from faker) (4.12.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.4->faker) (1.16.0)\n",
             "Downloading Faker-33.0.0-py3-none-any.whl (1.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m21.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m17.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: faker\n",
             "Successfully installed faker-33.0.0\n"
           ]
@@ -207,7 +314,7 @@
         "from pyspark.sql import DataFrame\n",
         "from faker import Faker\n",
         "\n",
-        "def enrich_df(df: DataFrame) -> DataFrame:\n",
+        "def enrich_df(df, batch_id) -> DataFrame:\n",
         "  fake = Faker()\n",
         "  new_columns = {\n",
         "      'name': F.lit(fake.name()),\n",
@@ -231,37 +338,9 @@
         ")"
       ],
       "metadata": {
-        "id": "WCUhAzDOD4Q3",
-        "outputId": "c4498723-1db1-4230-e888-3efb7454ee85",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
-        }
+        "id": "WCUhAzDOD4Q3"
       },
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'DataStreamReader' object has no attribute 'transform'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-68-761118126a5e>\u001b[0m in \u001b[0;36m<cell line: 18>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mreadStream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rate\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0moption\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rowsPerSecond\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menrich_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m )\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'DataStreamReader' object has no attribute 'transform'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "query.stop()"
-      ],
-      "metadata": {
-        "id": "W4bsXBZ6EPW_"
-      },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +355,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +399,7 @@
       "metadata": {
         "id": "m22vpxcxIUNa"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
