--- a/spark_streaming/examples/example_2_rate.ipynb
+++ b/spark_streaming/examples/example_2_rate.ipynb
@@ -222,11 +222,11 @@
         "result.sort(F.asc(\"window\")).show(100, False)"
       ],
       "metadata": {
-        "id": "-3SWIR6Ml8Al",
-        "outputId": "e579771a-7fcc-409d-b938-0c0ce4d5fae9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-3SWIR6Ml8Al",
+        "outputId": "e579771a-7fcc-409d-b938-0c0ce4d5fae9"
       },
       "execution_count": 143,
       "outputs": [
@@ -310,11 +310,22 @@
     {
       "cell_type": "code",
       "source": [
+        "!rm -rf content/output/events"
+      ],
+      "metadata": {
+        "id": "UFND4p5-2Na5"
+      },
+      "execution_count": 311,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pyspark.sql.functions as F\n",
         "from pyspark.sql import DataFrame\n",
         "from faker import Faker\n",
         "\n",
-        "def enrich_df(df, batch_id) -> DataFrame:\n",
+        "def insert_into_table(df, batch_id):\n",
         "  fake = Faker()\n",
         "  new_columns = {\n",
         "      'name': F.lit(fake.name()),\n",
@@ -324,68 +335,75 @@
         "      'phone': F.lit(fake.phone_number())\n",
         "  }\n",
         "  df = df.withColumns(new_columns)\n",
-        "  return df\n",
+        "  df.write.mode(\"append\").format(\"parquet\").save(\"content/output/events\")\n",
         "\n",
         "# read stream\n",
-        "df_stream = spark.readStream.format(\"rate\").option(\"rowsPerSecond\", 10).load()\n",
+        "df_stream = spark.readStream.format(\"rate\").option(\"rowsPerSecond\", 1).load()\n",
         "\n",
         "# write stream\n",
         "query = (df_stream.writeStream\n",
-        ".format('memory')\n",
-        ".queryName('enriched')\n",
         ".outputMode('append')\n",
+        ".trigger(processingTime='1 seconds')\n",
+        ".foreachBatch(insert_into_table)\n",
         ".start()\n",
         ")"
       ],
       "metadata": {
         "id": "WCUhAzDOD4Q3"
       },
-      "execution_count": null,
+      "execution_count": 317,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "spark.sql(\"select * from enriched\").show()"
+        "query.stop()\n"
+      ],
+      "metadata": {
+        "id": "KEMAlpKhwLNu"
+      },
+      "execution_count": 318,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.read.parquet(\"content/output/events\").show(100, False)"
       ],
       "metadata": {
         "id": "89s50dHjECqk",
-        "outputId": "07561df0-e789-41fc-85c6-e37fa9d55aa7",
+        "outputId": "43972f9e-4221-44c9-e5a4-0de79fbff532",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 316,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+--------------------+-----+----------+--------------------+--------------------+----------+------------+\n",
-            "|           timestamp|value|      name|             address|               email|       dob|       phone|\n",
-            "+--------------------+-----+----------+--------------------+--------------------+----------+------------+\n",
-            "|2024-11-19 20:32:...|    0|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    1|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    2|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    3|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    4|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    5|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    6|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    7|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    8|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|    9|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   10|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   11|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   12|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   13|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   14|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   15|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   16|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   17|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   18|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "|2024-11-19 20:32:...|   19|John Silva|21383 Davis Green...|isabelsalas@examp...|1942-01-04|775.239.3916|\n",
-            "+--------------------+-----+----------+--------------------+--------------------+----------+------------+\n",
-            "only showing top 20 rows\n",
+            "+-----------------------+-----+------------------+-----------------------------------------------------------+----------------------------+----------+---------------------+\n",
+            "|timestamp              |value|name              |address                                                    |email                       |dob       |phone                |\n",
+            "+-----------------------+-----+------------------+-----------------------------------------------------------+----------------------------+----------+---------------------+\n",
+            "|2024-11-22 17:09:40.928|13   |Jennifer Padilla  |4723 Justin Stravenue Apt. 795\\nSouth Ashleyville, CT 67628|michaeltorres@example.com   |1916-02-22|+1-868-292-8492x48606|\n",
+            "|2024-11-22 17:09:43.928|16   |Brandon Camacho   |88045 Owens Points Apt. 983\\nEast Michelleborough, GU 99123|torresedward@example.net    |1932-09-15|(772)402-8764        |\n",
+            "|2024-11-22 17:09:29.928|2    |Timothy Lopez     |311 Church Throughway Suite 666\\nDominguezbury, MH 74128   |gloverlaura@example.net     |1934-03-16|(507)746-9168        |\n",
+            "|2024-11-22 17:09:30.928|3    |Jordan Goodwin PhD|Unit 7962 Box 6328\\nDPO AA 80830                           |christopher48@example.net   |1950-08-14|5635485892           |\n",
+            "|2024-11-22 17:09:31.928|4    |Jordan Goodwin PhD|Unit 7962 Box 6328\\nDPO AA 80830                           |christopher48@example.net   |1950-08-14|5635485892           |\n",
+            "|2024-11-22 17:09:35.928|8    |Teresa Kim        |141 Travis Hills Suite 933\\nNorth Arielview, OK 62545      |morrisdylan@example.net     |2022-12-24|549-905-3641x42100   |\n",
+            "|2024-11-22 17:09:28.928|1    |Terry Ortiz       |42897 Jessica Drive Suite 379\\nDiaztown, OH 16669          |christinebaldwin@example.org|1926-06-02|(934)859-1870        |\n",
+            "|2024-11-22 17:09:36.928|9    |William Garrison  |4319 Karen Junction\\nMcdonaldside, NM 00564                |powersdawn@example.org      |1975-02-21|(518)344-7585x1578   |\n",
+            "|2024-11-22 17:09:32.928|5    |Jennifer Lloyd    |503 Nicole Flats\\nNorth Dustin, GA 38015                   |baxterbrittany@example.com  |1944-04-21|(388)669-7867x77982  |\n",
+            "|2024-11-22 17:09:38.928|11   |Brandon Bradley   |314 Williams Turnpike\\nSouth Kaylaton, CA 03974            |ryanjensen@example.com      |2019-05-18|311.569.1608         |\n",
+            "|2024-11-22 17:09:27.928|0    |Tracy Davis       |62231 Courtney Ridge\\nSouth Sally, NV 88848                |jasonwolf@example.net       |1947-07-03|+1-889-207-5787x65305|\n",
+            "|2024-11-22 17:09:42.928|15   |Lisa Wilson       |9984 Jonathan Glens Suite 773\\nRodgersside, AL 84653       |molly78@example.com         |2020-03-12|7418347065           |\n",
+            "|2024-11-22 17:09:37.928|10   |Heather Sims      |0115 Miller Court\\nPort Williamville, MA 26583             |ejones@example.com          |1923-04-20|724-666-4026x647     |\n",
+            "|2024-11-22 17:09:34.928|7    |Jessica Wilson    |274 Martin Harbor\\nLake Lisa, GA 35484                     |margaretrandall@example.org |1977-09-15|(866)986-0391        |\n",
+            "|2024-11-22 17:09:39.928|12   |Lindsay Henry     |44338 Ashley Trail\\nLarryborough, SC 30519                 |piercetracy@example.org     |1952-03-03|862-338-3227         |\n",
+            "|2024-11-22 17:09:41.928|14   |George Smith      |213 Tyler Cliffs\\nWest Amandafurt, PW 58380                |brian63@example.com         |1931-07-12|360.255.7480         |\n",
+            "|2024-11-22 17:09:33.928|6    |Amy Hamilton      |PSC 7718, Box 3814\\nAPO AP 62469                           |rachel31@example.com        |1955-11-11|753.276.1547x296     |\n",
+            "+-----------------------+-----+------------------+-----------------------------------------------------------+----------------------------+----------+---------------------+\n",
             "\n"
           ]
         }
@@ -398,15 +416,6 @@
       ],
       "metadata": {
         "id": "m22vpxcxIUNa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KhoudBI7EG0o"
       },
       "execution_count": null,
       "outputs": []
