--- a/spark/challenges/challenge_1.ipynb
+++ b/spark/challenges/challenge_1.ipynb
@@ -30,7 +30,7 @@
         "\n",
         "- Transformations\n",
         "  - vehicles\n",
-        "    - create \"date\" extracted from \"timestamp\" column (format: hh24miss)\n",
+        "    - create \"date\" extracted from \"timestamp\" column (format: date - yyyy-mm-dd or yyyymmdd)\n",
         "\n",
         "- Write data as PARQUET into the BRONZE layer (/content/lake/bronze)\n",
         "  - Partition \"vehicles\" by \"date\" column\n",
