--- a/spark/misc/etl_program.ipynb
+++ b/spark/misc/etl_program.ipynb
@@ -14,6 +14,7 @@
       "source": [
         "from pyspark.sql import DataFrame, SparkSession\n",
         "from pyspark.sql.functions import *\n",
+        "import pyspark.sql.functions as F\n",
         "from pyspark.sql.types import *\n",
         "import requests\n",
         "\n",
@@ -34,13 +35,33 @@
         "        df = spark.read.json(rdd)\n",
         "      return df\n",
         "\n",
-        "    def load(self, df: DataFrame, format: str, path: str, **kwargs) -> None:\n",
-        "        df.write.mode(\"overwrite\").format(format).save(path)\n",
+        "    def load(self, df: DataFrame, format: str, path: str, partition_column: str = None, **kwargs) -> None:\n",
+        "        if partition_column:\n",
+        "          df.coalesce(1).write.mode(\"overwrite\").partitionBy(partition_column).format(format).save(path)\n",
+        "        else:\n",
+        "          df.coalesce(1).write.mode(\"overwrite\").format(format).save(path)\n",
         "\n",
         "class ETLTask(ETLFlow):\n",
         "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
         "        self.spark = spark\n",
+        "\n",
+        "    def ingestion_lines(self):\n",
+        "      # schema\n",
+        "      lines_schema = StructType([StructField('color', StringType(), True),\n",
+        "                                 StructField('facilities', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('id', StringType(), True),\n",
+        "                                 StructField('localities',ArrayType(StringType(), True), True),\n",
+        "                                 StructField('long_name', StringType(), True),\n",
+        "                                 StructField('municipalities', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('patterns', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('routes', ArrayType(StringType(), True), True),\n",
+        "                                 StructField('short_name', StringType(), True), StructField('text_color', StringType(), True)])\n",
+        "      # ingestion\n",
+        "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/lines\", schema=lines_schema)\n",
+        "      # load\n",
+        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/lines\")\n",
+        "\n",
         "\n",
         "    def ingestion_vehicles(self):\n",
         "      vehicle_schema = StructType([StructField('bearing', IntegerType(), True),\n",
@@ -60,7 +81,12 @@
         "                                  StructField('trip_id', StringType(), True)])\n",
         "\n",
         "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
-        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
+        "\n",
+        "      # create date column\n",
+        "      # date(from_unixtime(1732305594))\n",
+        "      df = df.withColumn(\"date\", expr(\"date(timestamp)\"))\n",
+        "\n",
+        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\", partition_column=\"date\")\n",
         "\n",
         "    def cleansing_vehicles(self):\n",
         "      df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
@@ -88,8 +114,11 @@
         "    print(\"Running Task - Ingestion Vehicles\")\n",
         "    etl.ingestion_vehicles()\n",
         "\n",
+        "    print(\"Running Task - Ingestion Lines\")\n",
+        "    etl.ingestion_lines()\n",
+        "\n",
         "    print(\"Running Task - Cleansing Vehicles\")\n",
-        "    etl.cleansing_vehicles()\n",
+        "    # etl.cleansing_vehicles()\n",
         "\n",
         "    #etl.enrich()\n",
         "\n",
@@ -97,12 +126,12 @@
       ],
       "metadata": {
         "id": "nojCMG8M-CmF",
-        "outputId": "882713b6-1bb1-442c-c480-9634b13df9bf",
+        "outputId": "8128b8b9-3979-468a-98a6-3a9a3852c952",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,6 +139,7 @@
           "text": [
             "Starting ETL program\n",
             "Running Task - Ingestion Vehicles\n",
+            "Running Task - Ingestion Lines\n",
             "Running Task - Cleansing Vehicles\n",
             "ETL program completed\n"
           ]
@@ -130,7 +160,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
