--- a/spark_streaming/examples/example_4_using_dataproc.ipynb
+++ b/spark_streaming/examples/example_4_using_dataproc.ipynb
@@ -166,7 +166,8 @@
         "          .foreachBatch(insert_vehicles(bronze_path))\n",
         "          .option(\"checkpointLocation\", \"/content/bronze/checkpoint\")\n",
         "          .trigger(processingTime='20 seconds')\n",
-        "          .start())"
+        "          .start()\n",
+        "          .awaitTermination(60)"
       ]
     }
   ],
