--- a/spark_streaming/dataproc/producer_collab.ipynb
+++ b/spark_streaming/dataproc/producer_collab.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -138,19 +138,13 @@
     "from pyspark.sql.types import *\n",
     "import json\n",
     "import datetime\n",
-    "import os\n",
     "import time\n",
-    "from google.cloud import storage\n",
     "\n",
-    "def ingest_from_api(url: str, table: str, landing_path: str):\n",
+    "def ingest_from_api(url: str, landing_path: str):\n",
     "    print(f\"fetching data from {url}...\")\n",
     "    response = requests.get(url)\n",
     "    timestamp = datetime.datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
-    "\n",
-    "    storage_client = storage.Client()\n",
-    "    bucket = storage_client.bucket(bucket_name)\n",
     "    temp_file = f\"/content/temp/vehicles_{int(timestamp)}.json\"\n",
-    "    file_name = f\"{landing_path}_{int(timestamp)}.json\"\n",
     "\n",
     "    if response.status_code == 200:\n",
     "        data = response.json()\n",
@@ -162,7 +156,7 @@
     "def producer_vehicles(loop: int, interval_time: int, landing_path: str):\n",
     "    for i in range(loop):\n",
     "        print(f\"Producer running...{i}\")\n",
-    "        ingest_from_api(f\"https://api.carrismetropolitana.pt/vehicles\", \"vehicles\", landing_path)\n",
+    "        ingest_from_api(f\"https://api.carrismetropolitana.pt/vehicles\", landing_path)\n",
     "        time.sleep(interval_time)\n",
     "\n",
     "if __name__ == '__main__':\n",
